# buffalo

./: .gitattributes  .gitignore  .gitmodules  .project.info  .readthedocs.yml  .travis.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.MD  MANIFEST.in  NOTICE.md  README.md  build.py  build_extension.py  cuda_extension.py  cuda_setup.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  site.cfg
.github/workflows/: build_and_publush.yaml  python-app.yml  static_lint.yaml
benchmark/: README.md  accuracy_warp.md  base.py  evaluate.py  main.py  models.py  test_accuracy.py  test_parallel.py  test_performance.py
buffalo/: __init__.py  cli.py  version.py
buffalo/algo/: __init__.py  _als.pyx  _bpr.pyx  _cfr.pyx  _eals.pyx  _plsi.pyx  _w2v.pyx  _warp.pyx  als.py  als.pyx  base.py  bpr.py  bpr.pyx  cfr.py  eals.py  optimize.py  options.py  plsi.py  w2v.py  w2v.pyx  warp.py
buffalo/algo/cuda/: _als.pyx  _bpr.pyx
buffalo/algo/cupy/: _als.py
buffalo/algo/tensorflow/: _als.py
buffalo/data/: __init__.py  base.py  buffered_data.py  data.py  fileio.hpp  fileio.pyx  mm.py  prepro.py  stream.py
buffalo/evaluate/: __init__.py  base.py  quickselect.hpp  quickselect.pyx
buffalo/misc/: __init__.py  _aux.py  _log.pyx  aux.py  log.py  log.pyx  util.py
buffalo/parallel/: __init__.py  _core.hpp  _core.pyx  base.py
docs/: README.md  algo.rst  conf.py  index.rst  intro.rst  parallels.rst  quickstart.rst  requirements.txt
docs/_build/doctrees/: algo.doctree  environment.pickle  index.doctree  intro.doctree  parallels.doctree
docs/_build/html/: .buildinfo  algo.html  genindex.html  index.html  intro.html  objects.inv  parallels.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  intro.rst.txt
examples/: Dockerfile  README.md  als.ml20m.par.top10.tsv  example_als.py  mm.h5py
examples/jupyter-examples/: 0-0. Data Transform for Buffalo's input data.ipynb  0. Data Transform for Buffalo's input data.ipynb  1. Matrix Factorization.ipynb  2-1. Cofactor(splite store).ipynb  2. Cofactor.ipynb  3. skip-gram.ipynb  4. Performance comparison over models.ipynb  5. Validation and Hyper-parameter Optimization.ipynb  6. KakaoBrunch12M.ipynb
examples/jupyter-examples/.ipynb_checkpoints/: 0. Data Transform for Buffalo's input data-checkpoint.ipynb  1. Matrix Factorization-checkpoint.ipynb  2. Cofactor-checkpoint.ipynb  3. skip-gram-checkpoint.ipynb  4. Performance comparison over models-checkpoint.ipynb  5. KakaoBrunch12M-checkpoint.ipynb
include/buffalo/: algo.hpp  concurrent_queue.hpp
include/buffalo/algo_impl/als/: als.hpp
include/buffalo/algo_impl/bpr/: bpr.hpp
include/buffalo/algo_impl/cfr/: _cfr.hpp  cfr.hpp
include/buffalo/algo_impl/eals/: eals.hpp
include/buffalo/algo_impl/plsi/: plsi.hpp
include/buffalo/algo_impl/w2v/: w2v.hpp
include/buffalo/algo_impl/warp/: warp.hpp
include/buffalo/cuda/: utils.cuh
include/buffalo/cuda/als/: als.h  als.hpp
include/buffalo/cuda/bpr/: bpr.hpp
include/buffalo/misc/: blas.hpp  log.hpp  progressbar.hpp
install/: cuda_setup.py
lib/: algo.cc
lib/algo_impl/als/: als.cc
lib/algo_impl/bpr/: bpr.cc
lib/algo_impl/cfr/: _cfr.cc  cfr.cc
lib/algo_impl/eals/: eals.cc
lib/algo_impl/plsi/: plsi.cc
lib/algo_impl/w2v/: w2v.cc
lib/algo_impl/warp/: warp.cc
lib/cuda/als/: als.cu
lib/cuda/bpr/: bpr.cu
lib/misc/: log.cc
tests/: .gitignore  README.md  preprocess.py  pytest.ini
tests/algo/: .gitignore  base.py  download.sh  download_internal.sh  test_als.py  test_base.py  test_bpr.py  test_cfr.py  test_eals.py  test_implicit.py  test_optimize.py  test_plsi.py  test_quickselect.py  test_w2v.py  test_warp.py
tests/data/: test_data.py  test_mm.py  test_prepro.py  test_stream.py
tests/ext/ml-100k/: iid  main  stream  uid
tests/ext/ml-20m/: iid  main  uid
tests/ext/text8/: main
tests/parallel/: base.py  test_algo.py  test_ann.py  test_base.py
tests/res/: als_run_example.json
tests/util/: test_aux.py  test_util.py
