[build-system]
requires = ["setuptools>=67.6.1", "numpy~=1.24.3", "Cython>=0.29.32", "packaging>=22.0", "py-cpuinfo"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = ""
skip = ["pp*", "*musl*",  "*-manylinux_i686", "*win*"]

[tool.cibuildwheel.macos]
before-all = "brew install gcc && brew install libomp"

[tool.poe.tasks]
  [tool.poe.tasks.codespell]
  help = "Run codespell on the code base"
  cmd = "codespell --skip=*egg-info,3rd,build,.git,_*.cpp,ext --ignore-words-list=als,ALS,coo"

  [tool.poe.tasks.isort]
  help = "Run isort on the code base"
  cmd  = "isort . -p=buffalo --skip=3rd/ --skip=docs/ --skip=build/ --skip=tests/ --skip=.pyx --check-only"

  [tool.poe.tasks.flake8-py]
  help = "Run flake8 on the code base"
  cmd = "flake8 ./ --filename=*.py --ignore=E402,E501,E731,E741 --exclude=__init__.py,setup.py,3rd/,build/"

  [tool.poe.tasks.flake8-pyx]
  help = "Run flake8 on the code base"
  cmd = "flake8 ./ --filename=*.pyx --ignore=E225,E731,E226,E227,E402,E501,E741,E901,E999 --exclude=__init__.py,3rd/,build/"

  [tool.poe.tasks.cpplint]
  help = "Run cpplint on the code base"
  cmd = """cpplint --linelength=140 --headers=hpp,h --extensions=cc,cpp \
         --filter=-runtime/int,-build/include_subdir,-legal/copyright,-readability/namespace,-readability/todo,-build/namespaces,-whitespace/comments,-readability/casting,-runtime/references,-whitespace/braces,-whitespace/forcolon,-build/include_order,-build/c++11 \
        --exclude=include/buffalo/cuda/als/als.hpp \
        --exclude=include/buffalo/cuda/bpr/bpr.hpp \
        --recursive ./lib ./include"""

  [tool.poe.tasks.lint]
  help = "Run linting tools on the code base"
  sequence  = ["isort", "flake8-py", "flake8-pyx", "cpplint"]
