[metadata]
name = buffalo
version = 2.0.2alpha0
author = recoteam
author_email = recoteam@kakaocorp.com
url = https://github.com/kakao/buffalo
description = TOROS Buffalo: A fast and scalable production-ready open source project for recommender systems
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache2
platforms = Linux, MacOS
classifiers =
    Programming Language :: C++,
    Programming Language :: Cython
    Programming Language :: Python
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy ~= 1.21.6
    h5py ~= 3.7.0
    psutil ~= 5.9.4
    fire ~= 0.5.0
    absl-py ~= 1.3.0
    scipy ~= 1.7.1

[options.entry_points]
console_scripts =
    Buffalo = buffalo.cli:_cli_buffalo
