[metadata]
name = buffalo
version = 2.0.2rc0
author = recoteam
author_email = recoteam@kakaocorp.com
url = https://github.com/kakao/buffalo
description = TOROS Buffalo: A fast and scalable production-ready open source project for recommender systems
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache2
platforms = Linux, MacOS
classifiers =
    Programming Language :: C++,
    Programming Language :: Cython
    Programming Language :: Python
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy ~= 1.23.5
    h5py ~= 3.9.0
    psutil ~= 5.9.5
    scipy ~= 1.10.1
